--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,6 +115,7 @@ body .wrapper .main__container .main_container_text_container {
 body .wrapper .main__container .main_container_text_container .main_container_text {
   font-weight: 400;
   font-size: 24px;
+  margin-bottom: 10px;
 }
 
 body .wrapper .main__contacts {
