--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -95,6 +95,7 @@ body{
                     .main_container_text{
                         font-weight: 400;
                         font-size: 24px;
+                        margin-bottom: 10px;
                     }
                 }
             }
